# DJANGO-PROJECT

./: LICENSE  pyproject.toml
educatioan/: apps.py
llm/: asgi.py  settings.py  urls.py  wsgi.py
teacher_management/: apps.py
