[project]
name = "django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.11",
    "pillow>=11.3.0",
    "psycopg>=3.2.10",
    "simplejwt>=2.0.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a21",
]
